src/test/deca/syntax/invalid/provided/invalide_methode.deca
class InvalidClass {
    int value;

    void invalidMethod(int x) {
        return x; // Erreur : une méthode void ne peut pas retourner de valeur
    }

    void anotherInvalidMethod() {
        int a = 5;
        a = a + "string"; // Erreur : incompatibilité de types (int + string)
    }
}

{
    InvalidClass obj = new InvalidClass();
    obj.invalidMethod(10); // L'appel contient des erreurs
}
